<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextViewNombreMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textSize="30sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:id="@+id/EditTextNombre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextViewApellidoMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apellido"
            android:textSize="30sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:id="@+id/EditTextApellido"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextViewEdadMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edad"
            android:textSize="30sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:id="@+id/EditTextEdad"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


    </LinearLayout>

    <Button
        android:id="@+id/buttonMandarMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonMandar"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"/>




</LinearLayout>